force-app/main/default/objects/Invoice_Payment_Line__c/Invoice_Payment_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Payment Line</label>
    <pluralLabel>Invoice Payment Lines</pluralLabel>
    <nameField>
        <label>Invoice Payment Line Name</label>
        <type>AutoNumber</type>
        <displayFormat>IPL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Junction object linking a Payment to individual Invoices with payment-specific metadata (reason codes, comments, processing fee allocation)</description>
</CustomObject>