force-app/main/default/objects/Invoice_Payment_Line__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>LongTextArea</type>
    <length>256</length>
    <description>Free text explanation, required when reason = Other</description>
</CustomField>