force-app/main/default/objects/Invoice_Payment_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice</referenceTo>
    <relationshipName>InvoicePaymentLines</relationshipName>
    <relationshipLabel>Invoice Payment Lines</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related invoice (standard Invoice object)</description>
</CustomField>