force-app/main/default/objects/Invoice_Payment_Line__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Lookup</type>
    <referenceTo>Payment</referenceTo>
    <relationshipName>InvoicePaymentLines</relationshipName>
    <relationshipLabel>Invoice Payment Lines</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent payment record (standard Payment object)</description>
</CustomField>