force-app/main/default/objects/Invoice_Payment_Line__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Amount applied to this invoice from this payment</description>
</CustomField>