force-app/main/default/objects/Invoice_Payment_Line__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <label>Processing Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Prorated portion of the credit card processing fee for this line</description>
</CustomField>