force-app/main/default/objects/Invoice_Payment_Line__c/fields/Short_Pay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Short_Pay_Reason__c</fullName>
    <label>Short Pay Reason</label>
    <type>Picklist</type>
    <description>Reason for short pay or overpay</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>